--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   ],
   "scripts": {
     "docs": "rm -fr docs && typedoc src/index.ts",
-    "build": "rm -fr dist && tsc --declaration",
     "buildLib": "node esbuild.bundle.js",
     "test": "jest --verbose --runInBand",
-    "release": "yarn build && yarn test && yarn release-it --npm.yarn1"
+    "release": "yarn build && yarn test && yarn release-it --npm.yarn1",
+    "build": "rm -rf lib && rm -rf dist && tsc --declaration && yarn buildLib && rm -rf types && tsc --P tsconfig.types.json"
   },
   "devDependencies": {
     "@release-it/keep-a-changelog": "^3.1.0",
@@ -35,7 +35,7 @@
     "@ton/crypto": ">=3.2.0"
   },
   "dependencies": {
-    "Buffer": "^0.0.0",
+    "buffer": "^6.0.3",
     "symbol.inspect": "1.0.1"
   },
   "publishConfig": {
