--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "@release-it/keep-a-changelog": "^3.1.0",
     "@ton/crypto": "^3.2.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
+    "@types/node": "18.8.4",
     "jest": "^29.7.0",
     "prando": "^6.0.1",
     "release-it": "^15.5.1",
     "ton3-core": "^0.0.20",
     "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
     "typedoc": "^0.25.12",
-    "typescript": "^5.4.3",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.4",
     "esbuild": "0.13.13"
   },
   "peerDependencies": {
