--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,16 @@ services:
     image: node:18.15
     volumes:
       - .:/app
-    command: bash -c "cd /app && rm -rf node_modules && rm -f package-lock.json && npm i"
-  installTest:
-    user: node
-    image: node:18.15
-    volumes:
-      - .:/app
-    command: bash -c "cd /app/test && npm run cp:libs && rm -rf node_modules && rm -f package-lock.json && npm i"
+    command: bash -c "cd /app && rm -rf node_modules && yarn"
   build: 
     user: node
     image: node:18.15
     volumes:
       - .:/app
-    command: bash -c "cd /app && npm run build"
+    command: bash -c "cd /app && yarn build"
   buildLib:
     user: node
     image: node:18.15
     volumes:
       - .:/app
-    command: bash -c "cd /app && npm run buildLib"   
+    command: bash -c "cd /app && yarn buildLib"   
